--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -1,4 +1,10 @@
-<h1 class="header">我是 header</h1>
-<a href="index.html">index</a>
-<a href="about.html">about</a>
-<a href="contact.html">contact</a>
+<nav class="nav">
+    <div class="container-fornav acc logo">
+        <div class="logo_icon"><a href="index.html"><img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/logo-white.png" alt="glasses_logo"></a></div>
+        <ul class="logo_bar_for ">
+            <li><a href="optical.html">系列鏡框</a></li>
+            <li><a href="store.html">門市據點</a></li>
+            <li><a href="#">部落格</a></li>
+            <li><a href="question.html">常見問題</a></li>
+        </ul>
+    </nav>
