--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -1,5 +1,36 @@
+@import url(https://fonts.googleapis.com);
+@import url(https://fonts.gstatic.com);
+@import url(https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap);
+@import url(https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200);
+
+@import url(https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0);
+
+
+
+
+
+@import './helper/variables';
+@import './base/reset';
+
+@import './base/base';
+@import './layout/page.scss';
 @import './layout/header.scss';
 @import './layout/footer.scss';
-
+@import './layout/goodnavbar.scss';
+@import './layout/gooduximg.scss';
+@import './layout/goodall.scss';
+@import './layout/title.scss';
 
 @import './pages/index.scss';
+@import './pages/optical.scss';
+@import './pages/store.scss';
+@import './pages/question.scss';
+@import './pages/storepoint.scss';
+
+
+
+
+
+
+
+
