--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -1,1 +1,50 @@
-<footer class="footer">我是 footer</footer>
+
+<footer class="footer">
+    <div class="container">
+    <div class="footerall d-flex jcsc">
+    <div class="footer1 ">
+        <ul class="footer1_item d-flex acc">
+            <li><a href="index.html">首頁</a></li>
+            <li><a href="optical.html">系列鏡框</a></li>
+            <li><a href="store.html">門市據點</a></li>
+            <li><a href="index.html">部落格</a></li>
+            <li><a href="question.html">常見問題</a></li>
+        </ul>
+        <ul class="footer1_big">
+        <li class="footer_tel">
+            <ul class="d-flex aic">
+                <li>
+                    <span class="material-symbols-outlined">
+                        call
+                        </span>
+                  </li>
+                <li><a href="tel:0800-000-00">0800-000-00</a></li>
+            </ul>
+        </li>
+        <li class="footer_email">
+            <ul class="d-flex aic">
+                <li><span class="material-symbols-outlined">
+                    mail
+                    </span></li>
+                <li><a href="mailto:glasses@business.com">glasses@business.com</a></li>
+            </ul>
+         </li>
+        </ul>
+    </div>
+    <div class="footer2">
+        <ul class=" d-flex ">
+            <li ><a href=""><img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/ic-social-fb.png" alt=""></a></li>
+            <li><a href=""><img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/ic_social_ig.png" alt=""></a></li>
+            <li><a href=""><img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/ic_social_line.png" alt=""></a></li>
+        </ul>
+    </div>
+</div>
+    <div class="footer3">
+        <ul class="copyright d-flex acc jcsc">
+            <li style="margin-right: auto;">Copyright © 2020 Glasses.All rights reserved.</li>
+            <li><a href="">隱私權政策</a></li>
+            <li><a href="">服務條款</a></li>
+        </ul>
+    </div>
+    </div>
+</footer>
